fixed card text spacing on thin devices

--- a/client/src/components/tasks/TaskCard.module.css
+++ b/client/src/components/tasks/TaskCard.module.css
@@ -7,5 +7,5 @@
     
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
